--- a/scripts/install
+++ b/scripts/install
@@ -22,7 +22,7 @@ chmod +x "$install_dir/answer"
 #=================================================
 ynh_script_progression "Adding $app's configuration files..."
 
-ynh_config_add --template="config.yaml" --destination="$data_dir/conf/config.yaml"
+ynh_config_add --template=".env" --destination="$install_dir/.env"
 
 #=================================================
 # SYSTEM CONFIGURATION
@@ -43,7 +43,7 @@ yunohost service add "$app" --description="Knowledge-based community software" -
 ynh_script_progression "Installing $app..."
 
 pushd "$install_dir"
-	./answer init -C $data_dir/
+	AUTO_INSTALL=true ./answer init -C $data_dir/
 popd
 
 #=================================================
