--- a/scripts/install
+++ b/scripts/install
@@ -49,7 +49,7 @@ yunohost service add "$app" --description="Knowledge-based community software" -
 ynh_script_progression "Installing $app..."
 
 pushd "$install_dir"
-	AUTO_INSTALL=true ./answer init -C $data_dir/
+	AUTO_INSTALL=true INSTALL_PORT=$port ./answer init -C $data_dir/
 popd
 
 #=================================================
